--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,20 @@ android {
         exclude 'META-INF/NOTICE'
     }
 }
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        // replace with the current version of the Android plugin
+        classpath 'com.android.tools.build:gradle:2.1.2'
+        // the latest version of the android-apt plugin
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.6'
+    }
+}
+
+apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -34,4 +48,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.jakewharton:butterknife:7.0.1'
+
+    apt 'org.parceler:parceler:1.0.2'
+    compile 'org.parceler:parceler-api:1.0.2'
 }
+
