--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
@@ -48,8 +48,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.jakewharton:butterknife:7.0.1'
-
     apt 'org.parceler:parceler:1.0.2'
     compile 'org.parceler:parceler-api:1.0.2'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
