--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.brauliomendez.mechanicsnotes"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.brauliomendez.mechanicsnotes" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -19,6 +19,5 @@
             </intent-filter>
         </activity>
     </application>
-
 
 </manifest>
