--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
@@ -24,23 +26,9 @@ android {
         exclude 'META-INF/NOTICE'
     }
 }
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        // replace with the current version of the Android plugin
-        classpath 'com.android.tools.build:gradle:2.1.2'
-        // the latest version of the android-apt plugin
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.6'
-    }
-}
-
-apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
@@ -50,6 +38,4 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     apt 'org.parceler:parceler:1.0.2'
     compile 'org.parceler:parceler-api:1.0.2'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
-
