--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.brauliomendez.mechanicsnotes" >
+<manifest package="com.brauliomendez.mechanicsnotes"
+          xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -19,5 +19,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
